# git-commit-analyser

./: LICENSE  Readme.md  pyproject.toml
gitca/: analyser.py  gitca.py
